refactor: separate native generation and build